--- a/PW/Teoria1HTML/style.css
+++ b/PW/Teoria1HTML/style.css
@@ -3,10 +3,9 @@ header a, header a:hover, header a:active, header a:visited, header a:link{
   color: white;
 }
 
-
-header, nav, section, article, footer, aside
+header, nav, section, article, aside, footer
 {
-  //border-radius:0px 30px 0px 30px;
+  //border: 1px solid black;
   padding: 10px;
 }
 
@@ -38,6 +37,12 @@ article{
   margin: 10px;
   border-radius: 5px;
   padding: 10px;
+}
+
+#footer{
+  bottom: 0;
+  margin-bottom: 0%;
+  width:100%;
 }
 
 .row{
