--- a/PW/Teoria3Django/Periodico/Noticias/templates/Noticias/index.html
+++ b/PW/Teoria3Django/Periodico/Noticias/templates/Noticias/index.html
@@ -9,6 +9,14 @@
 <ul>
 	{% for x in lista %}
 	<li><a href = "/Noticias/{{x.id}}/">{{x.title}}</a></li>
+		{% lista2 = x.author %}		
+		{% if lista2 %}
+		<ul>
+			{% for i in lista2 %}
+			<li>{{ i.name }}</li>
+			{% endfor %}
+		</ul>	
+		{% endif %}	
 
 	{% endfor %}
 </ul>
