De todo un poco, P4 Alg, REDES bingo...

--- a/PW/Teoria3Django/Periodico/Noticias/templates/Noticias/index.html
+++ b/PW/Teoria3Django/Periodico/Noticias/templates/Noticias/index.html
@@ -8,16 +8,7 @@
 {% if lista %}
 <ul>
 	{% for x in lista %}
-	<li><a href = "/Noticias/{{x.id}}/">{{x.title}}</a></li>
-		{% lista2 = x.author %}		
-		{% if lista2 %}
-		<ul>
-			{% for i in lista2 %}
-			<li>{{ i.name }}</li>
-			{% endfor %}
-		</ul>	
-		{% endif %}	
-
+	<li><a href = "/Noticias/{{x.slug}}/">{{x.title}}</a></li>
 	{% endfor %}
 </ul>
 {% else %}
